<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="mineViewModel"
            type="com.zxj.mine.mine.MineViewModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_FF9A9E"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ivSet"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:onClick="@{()->mineViewModel.onItemClick(5)}"
                    android:padding="10dp"
                    android:src="@drawable/ic_mine_set" />
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:background="@color/color_FF9A9E" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:paddingTop="40dp">

                <LinearLayout
                    android:id="@+id/llHead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="20dp">

                    <androidx.constraintlayout.utils.widget.ImageFilterButton
                        android:id="@+id/ivAvatar"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:background="@drawable/ic_mine_head"
                        app:roundPercent="1" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        android:paddingStart="10dp">

                        <TextView
                            android:id="@+id/tvName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            tools:text="昵称" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tvId"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="#E6E2E2"
                                android:textSize="14sp"
                                tools:text="ID:123" />

                            <TextView
                                android:id="@+id/tvRank"
                                android:layout_width="wrap_content"
                                android:layout_height="16dp"
                                android:layout_marginStart="10dp"
                                android:background="@drawable/shape_bg_level"
                                android:paddingStart="10dp"
                                android:paddingEnd="10dp"
                                android:textColor="@color/white"
                                android:textSize="12sp"
                                android:visibility="gone"
                                tools:text="lv:12345"
                                tools:visibility="visible" />


                        </LinearLayout>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvScoreRankList"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_sorce_bg"
                        android:drawableStart="@drawable/ic_mine_score"
                        android:drawablePadding="10dp"
                        android:onClick="@{()->mineViewModel.onItemClick(6)}"
                        android:paddingStart="10dp"
                        android:paddingTop="2dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="2dp"
                        android:text="@string/mine_scoreboard"
                        android:textColor="@color/white"
                        android:textSize="14sp" />
                </LinearLayout>


                <!--                <com.zlx.widget.waveview.WaveView-->
                <!--                    android:id="@+id/waveView"-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="15dp"-->
                <!--                    android:layout_alignParentBottom="true" />-->

            </RelativeLayout>
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="20dp">

                <LinearLayout
                    android:id="@+id/llScore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->mineViewModel.onItemClick(0)}"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingStart="10dp"
                    android:paddingTop="15dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="15dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_mine1" />

                    <TextView
                        style="@style/textview_15sp_style"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:text="@string/mine_integral"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/tvMyCoin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:textColor="#595858"
                        tools:text="当前积分: " />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_mine_into" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llCollect"
                    android:onClick="@{()->mineViewModel.onItemClick(1)}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingStart="10dp"
                    android:paddingTop="15dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="15dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_mine2" />

                    <TextView
                        style="@style/textview_15sp_style"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:text="@string/mine_collect"
                        android:textColor="@color/black" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_mine_into" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llShare"
                    android:onClick="@{()->mineViewModel.onItemClick(2)}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingStart="10dp"
                    android:paddingTop="15dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="15dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_mine3" />

                    <TextView
                        style="@style/textview_15sp_style"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:text="@string/mine_share"
                        android:textColor="@color/black" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_mine_into" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:background="@color/color_F4F3F6" />

                <LinearLayout
                    android:id="@+id/llProjects"
                    android:onClick="@{()->mineViewModel.onItemClick(3)}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingStart="10dp"
                    android:paddingTop="15dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="15dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_mine4" />

                    <TextView
                        style="@style/textview_15sp_style"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:text="@string/mine_open_source_project"
                        android:textColor="@color/black" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_mine_into" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llAbout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->mineViewModel.onItemClick(4)}"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingStart="10dp"
                    android:paddingTop="15dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="15dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_mine5" />

                    <TextView
                        style="@style/textview_15sp_style"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:text="@string/mine_about_author"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:text="@string/mine_desc"
                        android:textColor="@color/color_FF9A9E"
                        android:textSize="12sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_mine_into" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
